# AI-Based-Quality-Check-On-Project-Code-And-Architecture

./: .env.example  .eslintrc.js  .gitignore  .npmrc  .prettierrc  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS_REPORT.md  COMPLETION_SUMMARY.md  Dockerfile.fastapi  Dockerfile.fastapi.new  FINAL_CHECKLIST.md  FIXES_APPLIED.md  FRONTEND_COMPLETE_SUMMARY.md  FRONTEND_COMPLETION_CHECKLIST.md  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_IMPLEMENTATION_STATUS.md  FRONTEND_QUICK_START.md  FRONTEND_TROUBLESHOOTING.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  NEXTAUTH_SETUP_GUIDE.md  PAGES_COMPLETION_GUIDE.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_FILE_INDEX.md  PHASE_3_FINAL_CHECKLIST.md  PHASE_3_FINAL_DELIVERY.md  PHASE_3_IMPLEMENTATION_CHECKLIST.md  PHASE_3_OPERATIONS_GUIDE.md  PHASE_3_QUICK_REFERENCE.md  PROJECT_DEEP_ANALYSIS.md  QUALITY_VERIFICATION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README.md.bak  SECURITY.md  SECURITY_FIXES_SUMMARY.md  START_APPLICATION.md  START_BACKEND_LOCAL.bat  (+15 more)
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  bandit.yaml  pyproject.toml  pytest.ini  requirements-fixed.txt  requirements-test.txt  requirements-windows.txt  requirements.in  requirements.txt  start_worker.bat  start_worker.sh  test_app.py  test_ast_llm_integration.py  test_config.py  test_minimal_app.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  add_code_review_tables.py
backend/app/: __init__.py  celery_config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  logging_config.py  metrics.py
backend/app/database/: __init__.py  database.py  neo4j_db.py  postgresql.py  redis_db.py
backend/app/models/: __init__.py  code_review.py
backend/app/schemas/: __init__.py  ai_pr_review_models.py  architecture.py  ast_models.py  auth.py  code_review.py  response_models.py  security_models.py
backend/app/services/: __init__.py  ai_pr_reviewer.py  ai_pr_reviewer_service.py  (+25 more)
backend/tests/: README.md  conftest.py  test_ai_pr_reviewer.py  test_architecture_analysis.py  test_celery_async.py  test_connections.py  test_neo4j_fixtures.py  test_python_parser.py
(+250 files in other folders)
