[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-quality-checker"
version = "0.1.0"
description = "AI-Based Quality Check On Project Code And Architecture"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "python-multipart>=0.0.6,<0.1.0",
    
    # Database
    "neo4j>=5.14.1,<6.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    
    # AI/ML
    "langchain>=0.1.0,<0.2.0",
    "langchain-community>=0.0.10,<0.1.0",
    "langchain-core>=0.1.0,<0.2.0",
    "openai>=1.3.0,<2.0.0",
    
    # Utils
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.25.0,<0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.6.0,<2.0.0",
    "ruff>=0.1.0,<0.6.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-code-quality-checker"
"Bug Tracker" = "https://github.com/yourusername/ai-code-quality-checker/issues"
